--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -70,7 +70,7 @@
         <div class="tooltip-content">
           <p>Pontianak, "Kota Khatulistiwa," terletak di Provinsi Kalimantan Barat, Indonesia. Dengan Equator Monument yang menandai garis khatulistiwa dan Sungai Kapuas yang indah, kota ini menawarkan pengalaman unik. Jelajahi warisan budaya seperti Masjid Jami Pontianak dan Kota Tua Pontianak. Nikmati pesona kota ini yang kaya akan keindahan alam dan budaya.</p>
         </div>
-        <br/><a href="../Kota/Samarinda/samarinda.html">See More...</a>
+        <br/><a href="">See More...</a>
       `;
       detailsBox.style.display = "block";
 
