--- a/Kota/jayapura/jayapura.html
+++ b/Kota/jayapura/jayapura.html
@@ -167,6 +167,7 @@
           <div class="blog-slider__img1">
           </div>
           <div class="blog-slider__content">
+            <span class="blog-slider__code">Top 1</span>
             <div class="blog-slider__title">Keladi Tumbuk</div>
             <div class="blog-slider__text">Keladi tumbuk merupakan hidangan khas masyarakat Biak berupa rebusan talas yang ditumbuk. Biasanya, keladi tumbuk disajikan dengan sayur pakis, ikan suir asap, dan sambak. Keladi tumbuk memiliki tekstur layaknya bubur bayi, lembut dengan rasa yang tawar.</div>
           </div>
