--- a/Kota/Sorong/sorong.html
+++ b/Kota/Sorong/sorong.html
@@ -49,53 +49,53 @@
                 </div>
                   <div class="col-md-7 mt-3 desc-provinsi">
                     <h3>Fun Fact:</h3>
-                    <p>Sorong merupakan nama yang berasal dari kata Soren. Dalam bahasa Biak Numfor, Soren berarti laut yang dalam dan bergelombang. Kota ini juga dijuluki sebagai Kota Minyak</p>
+                    <p>Kota Sorong adalah ibukota provinsi Papua Barat Daya, Indonesia. Kota ini dikenal dengan sebutan Kota Minyak, di mana Nederlands Nieuw-Guinea Petroleum Maatschappij (NNGPM) mulai melakukan aktivitas pengeboran minyak bumi di Sorong sejak tahun 1935. Sorong adalah kota terbesar kedua di Papua Indonesia, setelah Kota Jayapura. Sorong merupakan nama yang berasal dari kata Soren. Dalam bahasa Biak Numfor, Soren berarti laut yang dalam dan bergelombang.</p>
                   </div>
             </div>       
           </div>
           <div class="slider">
             <div class="slide-track">
               <div class="slide">
-                <img src="./medan-img/medan-car1.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-1.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car2.jpeg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-2.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car3.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-3.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car4.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-4.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car5.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-5.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car6.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-6.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car7.webp" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-7.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car1.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-1.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car2.jpeg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-2.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car3.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-3.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car4.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-4.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car5.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-5.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car6.jpg" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-6.jpeg" height="170" width="270" alt="" />
               </div>
               <div class="slide">
-                <img src="./medan-img/medan-car7.webp" height="170" width="270" alt="" />
+                <img src="./sorong-img/sorong-car-7.jpeg" height="170" width="270" alt="" />
               </div>
             </div>
           </div>
@@ -110,42 +110,42 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Holbung</p>
+          <p>Danau Ayamaru</p>
         </div>
         <div class="centerForm">
-          <p >Bukit Holbung adalah salah satu tempat wisata di Danau Toba yang terletak perbukitan di Desa Holbung, Kecamatan Sitiotio, Kabupaten Samosir, Sumatra Utara. Rangkaian perbukitan Bukit Holbung ini sudah ada sejak 200 tahun yang lalu.</p>
+            <p>Danau Ayamaru bukan hanya indah karena airnya yang bening, namun juga suasananya yang masih alami. Danau ini merupakan danau karst yang dikelilingi dengan bukit serta pepohonan yang rimbun. Masyarakat sekitar Danau Ayamaru Papua percaya bahwa dengan menjaga hutan sekeliling danau artinya mereka juga menjaga nenek moyang mereka. Itulah sebabnya Danau Ayamaru sangat dijaga kelestariannya oleh penduduk sekitar.</p>
         </div>
       </div>
       <div class="cont-items1">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Danau Toba</p>
+          <p>Air Terjun Sasnek</p>
         </div>
         <div class="centerForm">
-          <p >Danau Toba adalah danau alami berukuran besar di Indonesia yang berada di kaldera gunung supervulkan. Danau ini memiliki panjang 100 kilometer (62 mil), lebar 30 kilometer (19 mi), dan kedalaman 508 meter (1.667 ft). Danau ini terletak di tengah pulau Sumatra bagian utara dengan ketinggian permukaan sekitar 900 meter (2.953 ft). Danau ini adalah danau terbesar di Indonesia sekaligus danau vulkanik terbesar di dunia.</p>
+            <p>Air terjun Sasnek terletak di pedalaman Papua, Indonesia dan merupakan salah satu keajaiban alam yang patut dikunjungi. Keindahan air terjun ini membuatnya menjadi tujuan wisata yang populer bagi para wisatawan.</p>
         </div>
       </div>
       <div class="cont-items2">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Maimun</p>
+          <p>Pulau Buaya</p>
         </div>
         <div class="centerForm">
-          <p >Istana Maimun adalah ikon Kota Medan, Sumatra Utara, sebagai istana Kesultanan Deli. Didesain oleh arsitek Capt. Theodoor van Erp, istana ini memiliki 2 lantai, 30 ruangan, dan gaya arsitektur yang memadukan berbagai budaya. Terletak di Jalan Brigadir Jenderal Katamso, Aur, Medan Maimun, istana ini juga dikenal dengan sebutan Masjid Raya Medan.</p>
+            <p>Disebut Pulau Buaya karena pulaunya menyerupai buaya (kalau di lihat dari atas). Namun, tidak seseram namanya, pulau ini menawarkan wisata bahari yang amat menyenangkan. Laut yang masih bersih, jernih dan jauh dari pencemaran lingkungan. Di hamparan pantai terdapat sebagian besar di kelilingi oleh pepohonan kelapa.</p>
         </div>
       </div>
       <div class="cont-items3">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Bah Damanik</p>
+          <p>Puncak Petik Bintang</p>
         </div>
         <div class="centerForm">
-          <p>Pemandian Bah Damanik adalah pemandian air panas di desa Damanik, Sumatra Utara. Terkenal sebagai tempat rekreasi dan penyembuhan alami dengan air panas belerang. Menyediakan fasilitas kolam renang dan kamar mandi.</p>
+            <p>Puncak Petik Bintang terletak di Pegunungan Petik Bintang Kabupaten Maybrat. Dari puncak Gunung Petik Bintang bisa menikmati matahri terbit dan matahari terbenam, hingga melihat kebawah beratapan Awan dan Kabut yang menyelimuti serta menghiasi hutan dan gunung. </p>
         </div>
       </div>
       <div class="cont-items4">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Ucok Durian</p>
+          <p>Raja Ampat</p>
         </div>
         <div class="centerForm">
-          <p>Ucok Durian memang hanya salah satu dari banyak penjual durian di Kota Medan, tapi saking terkenal dan legendarisnya tempat ini, sudah bisa disebut sebagai salah satu tempat wisata di Medan. Soalnya, ini memang jadi salah satu tempat yang wajib banget dikunjungi saat liburan ke Medan. Saking terkenalnya tempat ini, Presiden Joko Widodo aja sampai datang ke sini tahun 2017 lalu.</p>
+            <p>Bagi Anda yang gemar diving dan snorkeling, wisata Raja Ampat bisa menjadi destinasi diving terbaik karena menawarkan keindahan bawah laut yang luar biasa.  Raja Ampat memiliki kekayaan dan keunikan spesies yang tinggi dengan ditemukannya beragam jenis ikan, hewan lunak (moluska), terumbu karang.</p>
         </div>
       </div>
     </div>
@@ -167,8 +167,8 @@
           </div>
           <div class="blog-slider__content">
             <span class="blog-slider__code">Top 1</span>
-            <div class="blog-slider__title">Mie Gomak</div>
-            <div class="blog-slider__text">Mi gomak adalah masakan khas suku Batak Toba dari Sumatra Utara, terutama daerah sekitar Danau Toba. Mi ini juga populer di berbagai daerah di Sumatra Utara dan provinsi lain di Indonesia. Dapat ditemukan di berbagai daerah di Sumatra Utara, mulai dari Medan, Siantar, Parapat, Labuhan Batu, Sibolga, hingga Deli Serdang.</div>
+            <div class="blog-slider__title">Abon Gulung</div>
+            <div class="blog-slider__text">Dinamakan Abon Gulung karena memang pada dasarnya makanan ini adalah abon dalam jumlah banyak yang dibungkus dengan roti gulung. Abon ini sangat lembut ketika digigit, namun sangat padat ketika mulai dikunyah. Begitu padatnya, hingga menyantap makanan ini satu saja sudah membuat perut kenyang.</div>
           </div>
         </div>
       </div>
@@ -183,8 +183,8 @@
           </div>
           <div class="blog-slider__content">
             <span class="blog-slider__code">Top 2</span>
-            <div class="blog-slider__title">Lontong Sayur</div>
-            <div class="blog-slider__text">Lontong sayur adalah makanan khas Minangkabau, Sumatra Barat. Ini adalah lontong dengan kuah santan kaya rempah. Varian gulai yang populer termasuk gulai paku, gulai tauco, dan gulai cubadak. Makanan ini biasanya disantap sebagai sarapan pagi di Sumatera Barat.</div>
+            <div class="blog-slider__title">Keripik Keladi</div>
+            <div class="blog-slider__text">Keripik keladi atau lebih dikenal dengan keripik talas adalah keripik khas yang dibuat di Papua dengan campuran talas datau biasa disebut keladi dengan beragam bumbu tradisional seperti bawang putih, garam, cabe rawit, dan kemudian digoreng.</div>
           </div>
         </div>
       </div>
@@ -199,8 +199,8 @@
           </div>
           <div class="blog-slider__content">
             <span class="blog-slider__code">Top 3</span>
-            <div class="blog-slider__title">Soto Medan</div>
-            <div class="blog-slider__text">Soto Medan adalah masakan khas Sumatra Utara dengan kuah kuning kental berbahan dasar santan dan rempah-rempah. Di dalamnya terdapat daging ayam atau sapi. Salah satu tempat terkenal untuk menikmati Soto Medan adalah RM Sinar Pagi di Kota Medan.</div>
+            <div class="blog-slider__title">Martabak Sagu</div>
+            <div class="blog-slider__text">Martabak sagu memiliki cita rasa yang manis dan gurih. Martabak ini diolah dari bahan sagu yang sudah dihaluskan kemudian digoreng dan diberi gula aren atau gula merah. </div>
           </div>
         </div>
       </div>
@@ -217,7 +217,7 @@
            <p>&copy; 2023</p>
         </div>
           <div class="col-md-6 d-flex justify-content-center">
-          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="./medan-img/logo-akreditasi.png" class="img-fluid"></a>
+          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="./sorong-img/logo-akreditasi.png" class="img-fluid"></a>
           </div>
         </div>
       </div>
