--- a/Kota/Pontianak/Pontianak.html
+++ b/Kota/Pontianak/Pontianak.html
@@ -49,7 +49,7 @@
                 </div>
                   <div class="col-md-7 mt-3 desc-provinsi">
                     <h3>Fun Fact:</h3>
-                    <p>Nama Samarinda berasal dari kata ‘sama’ dan ‘rinda’ yang berarti permukaan tanah yang tetap rendah serta tidak bergerak. Penamaan Samarinda berdasarkan persamaan ukuran tinggi rumah apung yang dimiliki suku Bugis Wajo di Samarinda.</p>
+                    <p>Nama Pontianak memiliki beberapa legenda yang beredar di masyarakat. Salah satu legenda mengatakan bahwa nama Pontianak berasal dari Ayunan Anak di sekitar Masjid Jami. Legenda lain mengatakan bahwa Pontianak berasal dari kata "pohon punti" yang berarti pohon-pohon tinggi. Ada juga cerita mengenai kata "Buntinganak" yang memiliki kaitan dengan asal usul nama Pontianak.</p>
                   </div>
             </div>       
           </div>
@@ -110,15 +110,15 @@
     <div class="container-wisata">
       <div class="cont-items">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Danau Biru Singkawang</p>
+          <p>Danau Biru</p>
         </div>
         <div class="centerForm">
-          <p >Danau ini dulunya sebagai tempat untuk membersihkan hasil pertambangan emas. Bekas galian tambang emas lama-lama terisi air dan menjadi danau seperti sekarang.</p>
+          <p >Danau Biru Singkawang dulunya sebagai tempat untuk membersihkan hasil pertambangan emas. Bekas galian tambang emas lama-lama terisi air dan menjadi danau seperti sekarang.</p>
         </div>
       </div>
       <div class="cont-items1">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Museum Kalimantan Barat</p>
+          <p>Museum</p>
         </div>
         <div class="centerForm">
           <p >Museum ini menyimpan banyak barang berharga dari sejarah Kalimantan Barat, termasuk sisa-sisa peradaban suku Melayu, Dayak, dan Tionghoa. Museum ini dilengkapi dengan tiga ruangan yaitu Ruang Pengenalan, Ruang Budaya Kalbar, dan Ruang Keramik</p>
@@ -126,15 +126,15 @@
       </div>
       <div class="cont-items2">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Pantai Pasir Panjang</p>
+          <p>Pantai</p>
         </div>
         <div class="centerForm">
-          <p >Pantai ini sangat layak untuk dikunjungi karena bebatuan, pasir putihnya yang seperti karpet, pemandangan yang masih alami, dan air lautannya yang tenang. Selain itu, ada kolam renang, motel, pemancingan, restoran, diskotik, dan tempat bermain. Ada fasilitas olah raga bermotor, seperti trek dan sirkuit, di mana remaja dapat menguji kemampuan mereka dalam balapan jalan raya dan di lintasan rumput.</p>
+          <p >Pantai pasir panjang ini sangat layak untuk dikunjungi karena bebatuan, pasir putihnya yang seperti karpet, pemandangan yang masih alami, dan air lautannya yang tenang. Selain itu, ada kolam renang, motel, pemancingan, restoran, diskotik, dan tempat bermain. Ada fasilitas olah raga bermotor, seperti trek dan sirkuit, di mana remaja dapat menguji kemampuan mereka dalam balapan jalan raya dan di lintasan rumput.</p>
         </div>
       </div>
       <div class="cont-items3">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Taman Arboretum Sylva UNTAN</p>
+          <p>Taman</p>
         </div>
         <div class="centerForm">
           <p>Salah satu taman yang bagus untuk bersantai adalah Taman Arboretum Sylva UNTAN. Taman ini memiliki plasa, bangku taman, relief pahlawan Digulis, dan taman atap. Taman ini tidak terlalu besar, tetapi banyak jenis bunga yang tumbuh dan berkembang di sana. Tempat ini tidak hanya taman; dindingnya penuh dengan relief. Taman ini memiliki diorama kehidupan masyarakat Belanda kuno selain dinding relief.</p>
@@ -142,10 +142,10 @@
       </div>
       <div class="cont-items4">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Vihara Tri Dharma Sui Kheu Thai Pak Kung</p>
+          <p>Vihara</p>
         </div>
         <div class="centerForm">
-          <p>Rumah Ibadah untuk orang Tri Dharma terletak di tanah seluas enam hektare di Kelurahan Sanggau Kulor, Kecamatan Singkawang Timur, Kota Singkawang, Kalimantan Barat. Dijamin bahwa berbagai ornamen, hiasan, dan gaya arsitektur yang menyerupai gaya Tiongkok Vihara akan membuat pengunjung terkagum-kagum.</p>
+          <p>Vihara Tri Dharma Sui Kheu Thai Pak Kung, rumah beribadah untuk orang Tri Dharma terletak di tanah seluas enam hektare di Kelurahan Sanggau Kulor, Kecamatan Singkawang Timur, Kota Singkawang, Kalimantan Barat. Dijamin bahwa berbagai ornamen, hiasan, dan gaya arsitektur yang menyerupai gaya Tiongkok Vihara akan membuat pengunjung terkagum-kagum.</p>
         </div>
       </div>
     </div>
