--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -70,7 +70,7 @@
         <div class="tooltip-content">
           <p>Pontianak, "Kota Khatulistiwa," terletak di Provinsi Kalimantan Barat, Indonesia. Dengan Equator Monument yang menandai garis khatulistiwa dan Sungai Kapuas yang indah, kota ini menawarkan pengalaman unik. Jelajahi warisan budaya seperti Masjid Jami Pontianak dan Kota Tua Pontianak. Nikmati pesona kota ini yang kaya akan keindahan alam dan budaya.</p>
         </div>
-        <br/><a href="">See More...</a>
+        <br/><a href="../Kota/Pontianak/Pontianak.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
@@ -112,7 +112,7 @@
         <div class="tooltip-content">
           <p>Manado, ibu kota Provinsi Sulawesi Utara, Indonesia, terkenal dengan keindahan alam bawah lautnya. Taman Laut Bunaken adalah tujuan utama untuk menyelam dan menikmati keanekaragaman terumbu karang yang menakjubkan. Kota ini juga memiliki warisan budaya yang kaya dengan pengaruh suku Minahasa. Nikmati pesona alam dan budaya Manado dalam perjalanan Anda.</p>
           </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Manado/Manado.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
