--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -98,7 +98,7 @@
         <div class="tooltip-content">
           <p>Makassar, juga dikenal sebagai Ujung Pandang, adalah kota terbesar di Sulawesi Selatan, Indonesia. Terletak di pantai barat daya pulau ini, Makassar menawarkan sejarah yang kaya dan kuliner lezat. Jelajahi Benteng Rotterdam dan nikmati makanan khas seperti Coto Makassar dan Konro. Nikmati pesona kota ini yang mencerminkan kekayaan budaya dan keindahan alam Sulawesi Selatan.</p>
           </div>
-        <br/><a href="https://www.google.com">See More...</a>
+        <br/><a href="../Kota/Makassar/Makassar.html">See More...</a>
       `;
       detailsBox.style.display = "block";
 
