--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -7,10 +7,8 @@
 <body>
   <ul class="navbar">
     <li>Travelindo</li>
-    <li><a href="#">Back</a></li>
-    <!-- <li><a href="#"></a></li>
-    <li><a href="#"></a></li> -->
-    <li><a href="#">About Us</a></li>
+    <li><a href="../login/login.html">Back</a></li>
+    <li><a href="../about/about.html">About Us</a></li>
   </ul>
   <div class="container">
     <div class="map-container">
