--- a/Kota/Makassar/Makassar.html
+++ b/Kota/Makassar/Makassar.html
@@ -49,7 +49,7 @@
                 </div>
                   <div class="col-md-7 mt-3 desc-provinsi">
                     <h3>Fun Fact:</h3>
-                    <p>Hari Jadi Makassar ditetapkan pada tanggal 9 November 1607 bertepatan di hari Jumat. Asal usul ditetapkan pada hari tersebut dikarenakan Raja Gowa ke-14 yaitu Mangngarangi Daeng Manrabia memeluk agama Islam, lalu disusul Raja Talo yaitu Mangkubumi I-Mallingkaang Daeng Manyonri Kareng Katangka. Setelah kedua raja ini masuk Islam, pada tanggal 9 November 1607 digelar shalat Jumat pertama di Masjid Tallo.</p>
+                    <p>Hari Jadi Makassar ditetapkan pada tanggal 9 November 1607 bertepatan di hari Jumat. Asal usul ditetapkan pada hari tersebut dikarenakan Raja Gowa ke-14 yaitu Mangngarangi Daeng Manrabia memeluk agama Islam, lalu disusul Raja Tallo yaitu Mangkubumi I-Mallingkaang Daeng Manyonri Kareng Katangka. Setelah kedua raja ini masuk Islam, pada tanggal 9 November 1607 digelar shalat Jumat pertama di Masjid Tallo.</p>
                   </div>
             </div>       
           </div>
@@ -118,7 +118,7 @@
       </div>
       <div class="cont-items1">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Leang Leang Maros</p>
+          <p>Leang Maros</p>
         </div>
         <div class="centerForm">
           <p >Wisata sejarah dan belajar tentang sisa-sisa kehidupan di masa lalu tersedia di tempat ini. Jejak peninggalan manusia purba yang berusia ribuan tahun dapat dilihat oleh pengunjung. seperti penemuan berbagai fosil dan artefak purba, lukisan telapak tangan di dinding gua, dan gambar babi rusa.</p>
@@ -126,7 +126,7 @@
       </div>
       <div class="cont-items2">
         <div class="icon"><i class="fa-solid fa-heart fa-xl"></i>
-          <p>Rammang - Rammang</p>
+          <p>Rammang</p>
         </div>
         <div class="centerForm">
           <p >Pantai ini sangat layak untuk dikunjungi karena bebatuan, pasir putihnya yang seperti karpet, pemandangan yang masih alami, dan air lautannya yang tenang. Selain itu, ada kolam renang, motel, pemancingan, restoran, diskotik, dan tempat bermain. Ada fasilitas olah raga bermotor, seperti trek dan sirkuit, di mana remaja dapat menguji kemampuan mereka dalam balapan jalan raya dan di lintasan rumput.</p>
@@ -145,7 +145,7 @@
           <p>Air Terjun</p>
         </div>
         <div class="centerForm">
-          <p>Air terjun Takapala terletak di Kampung Takapala, Desa Bontolerung, Kecamatan Tinggimoncong, Kabupaten Gowa, Sulawesi Selatan. Air Terjun Takapala terletak di sela-sela perbukitan daratan tinggi dan rerimbunan hutan. Itu cukup indah dan megah. Air Terjun Takapala, yang memiliki tinggi sekitar 109 meter dan debit air yang besar, menarik karena pemandangan alam yang indah. Dengan ketinggian ini, terbentuk kabut 20 meter di dasar air terjun. Tidak jarang, di dasar air terjun, Anda akan melihat pelangi. Karena lokasi wisata ini tinggi dan terbuka, air yang jatuh sering dibawa angin, menyebabkan gerimis tipis di sekitar air terjun. Selain itu, tebing curam dengan corak unik di sekitar air terjun membuatnya tetap alami.</p>
+          <p>Air Terjun Takapala terletak di Kampung Takapala, Desa Bontolerung, Kabupaten Gowa, Sulawesi Selatan. Air terjun ini memiliki tinggi sekitar 109 meter dan debit air yang besar. Keindahan alamnya meliputi perbukitan daratan tinggi, rerimbunan hutan, dan kabut di dasar air terjun. Terdapat juga pelangi yang sering terlihat di dasar air terjun. Lokasi wisata ini memiliki tebing curam dengan corak unik, menjadikannya tempat yang alami dan megah.</p>
         </div>
       </div>
     </div>
