--- a/about/about.html
+++ b/about/about.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark shadow-5-strong navbar-blur">
     <div class="container-fluid">
       <a class="navbar-brand">About Us</a>
-      <a class="navbar-brand justify-content-end" href="">Home</a>
+      <a class="navbar-brand justify-content-end" href="../Homescreen/homescreen.html">Home</a>
     </div>
   </nav>
 
